Fixed bug #32596 (Segfault/Memory Leak by getClass (etc) in __destruct)